Recent Activity now hides rows to prevent from overcrowding on smaller screens

--- a/app/styles/user-landing.scss
+++ b/app/styles/user-landing.scss
@@ -138,6 +138,8 @@
     flex-wrap: wrap;
     align-items: center; 
     gap: 0.5rem;
+    max-height: 510px;
+    overflow: hidden;
   }
 
   .user-landing-recent-activity-body-item {
@@ -256,8 +258,9 @@
 
   .user-landing-recent-activity-content {
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     padding: 0.75rem;
+    gap: 0.75rem;
   }
 
   .user-landing-favorites-container {
@@ -270,7 +273,8 @@
 
   .user-landing-favorites-content {
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     padding: 0.75rem;
+    gap: 0.75rem;
   }
 }
